# ChangeLog for sys-libs/ss
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.24 2006/12/10 00:26:46 drizzt Exp $

  10 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> ss-1.39.ebuild:
  Add ~x86-fbsd keyword

  09 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +files/ss-1.39-parse-types.patch, ss-1.39.ebuild:
  Cleanup ugly build code #146903 by throw_away_2002.

*ss-1.39 (01 Aug 2006)

  01 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  +files/ss-1.39-makefile.patch, +ss-1.39.ebuild:
  Version bump #141246 by David Brown.

  06 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> ss-1.38.ebuild:
  Replace an userland check by $CHOST check; added comment with reasons.

  10 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> ss-1.38.ebuild:
  Move exporting of vars in src_compile() and src_install() to work around
  portage env bug, similar to sys-fs/e2fsprogs-1.38.

  10 Sep 2005; Mike Frysinger <vapier@gentoo.org>
  +files/ss-1.38-locale.patch, ss-1.38.ebuild:
  Fix building with non-C locales (like estonian) #104116 by Toomas Mottus.

  08 Sep 2005; Aaron Walker <ka0ttic@gentoo.org> ss-1.38.ebuild:
  Stable on mips.

  11 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  files/ss-1.37-makefile.patch:
  Clean up cross-compile support.

  03 Aug 2005; Mike Frysinger <vapier@gentoo.org> ss-1.38.ebuild:
  Use bsd-shlibs on Darwin but elf-shlibs on all other systems #99728 by Kito.

  25 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org> ss-1.38.ebuild:
  Stable on hppa.

  20 Jul 2005; Markus Rothe <corsair@gentoo.org> ss-1.38.ebuild:
  Stable on ppc64

  19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> ss-1.38.ebuild:
  Stable on alpha.

  18 Jul 2005; Joseph Jezak <josejx@gentoo.org> ss-1.38.ebuild:
  Marked ppc stable.

  15 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> ss-1.38.ebuild:
  Stable on sparc

  14 Jul 2005; Seemant Kulleen <seemant@gentoo.org> ss-1.38.ebuild: