@@ -1,28 +1,9 @@
 AUX ss-1.38-locale.patch 550 RMD160 0c31fce2f16fa8057fa2d2d11797483876afbfb0 SHA1 15a2d3759f6309a188d82b21282ca50f738ebc27 SHA256 49909ebdaa316687c97c8b78d7485f0868167021f4c07f3d25fd984be2b0c600
-MD5 1a4c6e9e6476e4ed8c419a0a98e1a97c files/ss-1.38-locale.patch 550
-RMD160 0c31fce2f16fa8057fa2d2d11797483876afbfb0 files/ss-1.38-locale.patch 550
-SHA256 49909ebdaa316687c97c8b78d7485f0868167021f4c07f3d25fd984be2b0c600 files/ss-1.38-locale.patch 550
 AUX ss-1.39-makefile.patch 307 RMD160 1d0e083be1515512a1ebba6943ad5c6adcbe5efd SHA1 3a9e057d5b9e012eaa885db3ce83658a66ee7b4f SHA256 4a844e8ebb82fbaf528280b915067045b9906b423a6a9f3ef38046ade3667fd5
-MD5 70fb99ed8404c28a8e6408c2985980e1 files/ss-1.39-makefile.patch 307
-RMD160 1d0e083be1515512a1ebba6943ad5c6adcbe5efd files/ss-1.39-makefile.patch 307
-SHA256 4a844e8ebb82fbaf528280b915067045b9906b423a6a9f3ef38046ade3667fd5 files/ss-1.39-makefile.patch 307
 AUX ss-1.39-parse-types.patch 1117 RMD160 5858224739c494ae2e31507b217594cd1bf0440f SHA1 fa6ff6f281dca7d14e946df39c9b30a9faa14565 SHA256 f5741d617739d3e04e516bb0c22f385bdc01f598d181c50247f30cb4442d4fdd
-MD5 29853daadd9ea0d27abcc57e46d48e25 files/ss-1.39-parse-types.patch 1117
-RMD160 5858224739c494ae2e31507b217594cd1bf0440f files/ss-1.39-parse-types.patch 1117
-SHA256 f5741d617739d3e04e516bb0c22f385bdc01f598d181c50247f30cb4442d4fdd files/ss-1.39-parse-types.patch 1117
 DIST e2fsprogs-1.39.tar.gz 3695111 RMD160 67e77a7cbf0e719fa8b5a8ac6285b334e1c3481b SHA1 c2dad0c9bd76701eafe3804e2a7d072aa198f046 SHA256 dc2033447e69a1612881151f6f163e8a3b80e51d16f5e8b3576f3f8ccb325ea3
+DIST e2fsprogs-1.40-WIP-2007-04-11.tar.gz 4150775 RMD160 23de8d61cdb5f52f21022bfbb634ce60372627d4 SHA1 1ee81a2ee7bfab444d7cf7ae0ee6ba8a4eb08664 SHA256 3e259bd2a31905b83f30dc7847e80356f0334108b79ef04f6af9eafd7caf3293
 EBUILD ss-1.39.ebuild 1858 RMD160 e1f20dcafdb1b31eeaf0868a78bffe35f6f862ed SHA1 df6bea1061b17d66145b7abba33094d0dc225301 SHA256 947742cb69e5fc36533d311fa980b779ed043415b25dd3267ce76b692a22e7b1
-MD5 85038d4c7c47d49402b83a133f99af0d ss-1.39.ebuild 1858
-RMD160 e1f20dcafdb1b31eeaf0868a78bffe35f6f862ed ss-1.39.ebuild 1858
-SHA256 947742cb69e5fc36533d311fa980b779ed043415b25dd3267ce76b692a22e7b1 ss-1.39.ebuild 1858
-MISC ChangeLog 2983 RMD160 f3bf8cd5d1ba4dc3a1362cbd237ad90977363ceb SHA1 b6830f3df852330a47f8362c1bf75e6d3a187db2 SHA256 b2923111697a5f8f999497763f610f0bb5f2d579015eba727ee78496ccc4fb05
-MD5 f13db2e425b2eba095adfabe493154ac ChangeLog 2983
-RMD160 f3bf8cd5d1ba4dc3a1362cbd237ad90977363ceb ChangeLog 2983
-SHA256 b2923111697a5f8f999497763f610f0bb5f2d579015eba727ee78496ccc4fb05 ChangeLog 2983
+EBUILD ss-1.40_pre20070411.ebuild 1931 RMD160 2e06b0acbc45bc4cbb1d9c8327a4c7297c93614e SHA1 83119ec3fc3fa5ea50f5c99b83ec4508bfaccc4c SHA256 5670809dcabe9c827bd980b71ac8513c2792aeac6d7497398555c8e3ee18f85f
+MISC ChangeLog 3140 RMD160 a560d86443a73fb383cea90e7752328d67c59bf4 SHA1 ffb6f202c1fbf649653ab54ff20df591a0ad718c SHA256 1da0083993632efa774b26cc2a632489d8535428bedc33d1ef00040eb2ac1892
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
-MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
-RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
-SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-MD5 fc00317ae73d9c2807fd61dff454474c files/digest-ss-1.39 247
-RMD160 7fc0216dd2eb0963650054e763b94a26a3214c6a files/digest-ss-1.39 247
-SHA256 7f2869196368e8285912d8cc8ebe8d2ad3f08d07abad83f1011f753f3f824762 files/digest-ss-1.39 247
