@@ -1,0 +1,74 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ss-1.40_pre20070411.ebuild,v 1.1 2007/05/05 06:37:22 vapier Exp $
+
+EAPI="prefix"
+
+inherit eutils flag-o-matic toolchain-funcs
+
+SNAP="${PV##*_pre}"
+MY_PV="${PV%%_pre*}-WIP-${SNAP:0:4}-${SNAP:4:2}-${SNAP:6:2}"
+MY_P="e2fsprogs-${MY_PV}"
+
+DESCRIPTION="Subsystem command parsing library"
+HOMEPAGE="http://e2fsprogs.sourceforge.net/"
+SRC_URI="mirror://sourceforge/e2fsprogs/${MY_P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~mips ~x86"
+IUSE="nls"
+
+RDEPEND="~sys-libs/com_err-${PV}"
+DEPEND="${RDEPEND}
+	nls? ( sys-devel/gettext )"
+
+S=${WORKDIR}/e2fsprogs-${PV%%_pre*}
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+	epatch "${FILESDIR}"/${PN}-1.39-makefile.patch
+	epatch "${FILESDIR}"/${PN}-1.39-parse-types.patch #146903
+}
+
+src_compile() {
+	export LDCONFIG="${EPREFIX}"/bin/true
+	export CC=$(tc-getCC)
+	export STRIP="${EPREFIX}"/bin/true
+
+	# We want to use the "bsd" libraries while building on Darwin, but while
+	# building on other Gentoo/*BSD we prefer elf-naming scheme.
+	local libtype
+	case ${CHOST} in
+		*-darwin*) libtype=bsd;;
+		*)         libtype=elf;;
+	esac
+
+	econf \
+		--enable-${libtype}-shlibs \
+		--with-ldopts="${LDFLAGS}" \
+		$(use_enable nls) \
+		|| die
+	emake -C lib/ss COMPILE_ET=compile_et || die "make ss failed"
+}
+
+src_test() {
+	make -C lib/ss check || die "make check failed"
+}
+
+src_install() {
+	export LDCONFIG="${EPREFIX}"/bin/true
+	export CC=$(tc-getCC)
+	export STRIP="${EPREFIX}"/bin/true
+
+	dodir /usr/share/man/man1
+	make -C lib/ss DESTDIR="${D}" install || die
+
+	# Move shared libraries to /lib/, install static libraries to /usr/lib/,
+	# and install linker scripts to /usr/lib/.
+	dodir /$(get_libdir)
+	mv "${ED}"/usr/$(get_libdir)/*.so* "${ED}"/$(get_libdir)/ || die "move .so"
+	dolib.a lib/libss.a || die "dolib.a"
+	gen_usr_ldscript libss.so
+}
