@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/ss
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.24 2006/12/10 00:26:46 drizzt Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/ChangeLog,v 1.25 2007/05/05 06:37:22 vapier Exp $
+
+*ss-1.40_pre20070411 (05 May 2007)
+
+  05 May 2007; Mike Frysinger <vapier@gentoo.org>
+  +ss-1.40_pre20070411.ebuild:
+  Version bump #175790 by Hanno Boeck.
 
   10 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> ss-1.39.ebuild:
   Add ~x86-fbsd keyword
